test/testdata/string/not_callable_error.lox
"foo"(); // error: 'string' object is not callable
